--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 mccabe==0.7.0
 mypy-extensions==0.4.3
+pandoc-latex-environment==1.1.6
+pandocfilters==1.5.0
 pathspec==0.10.1
 platformdirs==2.5.3
 pycodestyle==2.9.1
